# DataReaperX

./: .gitignore  DEPLOY_FREE_TIER.md  DataReaper_OmnichannelShield_CopilotPrompt.md  README.md  datareaper-copilot-prompt.md  docker-compose.flaresolverr.yml  output.txt  prompt.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  output.txt  output_sleuth_live.json  pyproject.toml  ruff.toml
backend/data/brokers/: broker_catalog.yaml  broker_contact_points.yaml  broker_opt_out_rules.yaml  broker_selectors.yaml
backend/data/demo/: demo_dashboard.json  demo_graph.json  demo_scan.json  demo_war_room.json  sleuth_live_result_na0xy.json  sleuth_profile_checks_na0xy.json
backend/data/legal/: ccpa_rules.yaml  dpdp_rules.yaml  escalation_rules.yaml  gdpr_rules.yaml
backend/data/prompts/: communications_agent.md  inbox_triage.md  legal_agent.md  legal_notice.md  legal_reply.md  reply_generator.md  report_summary.md  sleuth_agent.md  sleuth_identity.md
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_tables.py  0002_identity_graph_tables.py  0003_broker_case_tables.py  0004_email_battle_tables.py  0005_audit_and_events.py  0006_access_mirror_tables.py  0007_scan_job_owner_google_sub.py
backend/scripts/: dev.ps1  import_broker_catalog.py  import_platform_catalog.py  print_byob_setup.py  replay_email_thread.py  seed_demo_data.py  smoke_test.py  start_api.ps1  start_render.sh  start_stack.ps1  start_worker.ps1  test_crawl_report.py
backend/static/: .gitkeep
backend/tests/: conftest.py
(+378 files in other folders)
